[project]
name = "livekit-plugins-audio-turn-detector"
version = "0.1.0"
description = "Audio-based turn detection plugin for LiveKit Agents"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cerana Studio", email = "dev@cerana.studio" },
]
keywords = ["livekit", "audio", "turn-detection", "voice-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "livekit-agents>=0.9.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
whisper = [
    "transformers>=4.30.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["livekit*"]

[tool.uv]
dev-dependencies = []
