[project]
name = "livekit-plugins-aws"
description = "LiveKit Agents Plugin for services from AWS"
readme = "README.md"
requires-python = ">=3.9.0"
license = "Apache-2.0"
authors = [{ name = "LiveKit", email = "hello@livekit.io" }]
keywords = [
  "ai",
  "audio",
  "aws",
  "livekit",
  "nova",
  "realtime",
  "sonic",
  "video",
  "voice"
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "aioboto3>=14.1.0",
  "aws_sdk_transcribe_streaming>=0.2.0; python_version >= '3.12'",
  "livekit-agents>=1.4.0.rc2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://docs.livekit.io"
Source = "https://github.com/livekit/agents"
Website = "https://livekit.io/"

[project.optional-dependencies]
realtime = [
  "aws-sdk-bedrock-runtime>=0.2.0; python_version >= '3.12'",
  "aws-sdk-signers>=0.0.3; python_version >= '3.12'",
  "boto3>1.35.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "livekit/plugins/aws/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
