[project]
name = "livekit-plugins-azure"
description = "Agent Framework plugin for services from Azure"
readme = "README.md"
requires-python = ">=3.9.0"
license = "Apache-2.0"
authors = [{ name = "LiveKit", email = "hello@livekit.io" }]
keywords = ["ai", "audio", "livekit", "realtime", "video", "voice", "webrtc"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "azure-cognitiveservices-speech>=1.43.0",
  "livekit-agents>=1.4.0.rc2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://docs.livekit.io"
Source = "https://github.com/livekit/agents"
Website = "https://livekit.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "livekit/plugins/azure/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
